--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>JSON APP</title>
   <link rel="stylesheet" href="../design/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet">
 </head>
 
 <body>
-
-
+  <div id="root">
+    <img src="logo.png">
+    <div class="container">
+    </div>
+  </div>
 
 
   <script src="../modern/script.js"></script>
